--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4         41         180       14.0           2  ONLINE"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "ONLINE  43.720000  173.700000  14.648000    2.300000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "array(['ONLINE', 'NONE', 'GROUP'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "Name: Type, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "max     67.000000  201.000000   20.000000     5.00000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "Name: Sales (Y), dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,16 +551,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c40f518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c84e8d0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "Name: Calls (X1), dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,23 +625,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a1c7baf98>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a1c7c6320>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x1a1c7c6668>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a1c7c69b0>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x1a1c7baba8>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x1a1c7c6cf8>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x1a1c7c6dd8>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a1cbae780>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a1cbaeac8>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x1a1cbaee10>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a1cbaeef0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x1a1cbae358>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x1a1cbb54e0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x1a1cbb5828>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "Name: Years (X3), dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        " <a list of 6 Patch objects>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,16 +755,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1c8c8a90>"
+       "<matplotlib.collections.PathCollection at 0x1a1cd38a90>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -797,16 +797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1ca43f28>"
+       "<matplotlib.collections.PathCollection at 0x1a1cdfaf60>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "<BarContainer object of 100 artists>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -861,16 +861,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a1c986358>"
+       "<seaborn.axisgrid.PairGrid at 0x1a1cd16320>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -939,6 +939,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* C:----------           | 0.90  | 0.95  | 0.98  | 0.99 \n",
+    "\n",
+    "* alpha ------       | 0.10  | 0.05  | 0.02  | 0.01\n",
+    "\n",
+    "* One-tail ---    | 1.28 | 1.65 | 2.05 | 2.33\n",
+    "\n",
+    "* Two-tail(+-) | 1.65 | 1.96 | 2.33 | 2.58"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4644351464435108\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A) The Mean sales per week is hypothesized at M > 41.5\n",
+    "H_0_mean = 42.5\n",
+    "H_0_sales_statement = Sample_mean > 41.5\n",
+    "H_A_sales_statement = Sample_mean < 41.5\n",
+    "alpha_a = 0.05 # 95% level of confidence\n",
+    "STD_sales = 7.171\n",
+    "n = 100\n",
+    "\n",
+    "def test_statistic(STD, n, x_bar, hypothetical_mean):\n",
+    "    numerator = x_bar - hypothetical_mean\n",
+    "    denominator = STD / math.sqrt(n)\n",
+    "    return numerator / denominator\n",
+    "\n",
+    "Z_c_sales = test_statistic(7.17, 100, 42.55, 41.5)\n",
+    "print(Z_c_sales)\n",
+    "# Our Test statistic is 1.46!  Now, we need to see if this is significant enough in comparison to our chart.\n",
+    "# At a 95% level of confidence, we are looking for a Z score of 1.65, because it is a right-tail test.\n",
+    "# Our data is not significant enough to suggest the H0 is incorrect, therefore we fail to reject the H0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4055160000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estimating margin of error for LARGE samples n > 30\n",
+    "E = Z_c_95 * (STD_sales / math.sqrt(n))\n",
+    "print(E)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -979,10 +1045,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Z_c_95 = 1.96\n",
+    "# used the most\n",
+    "Z_c_99 = 2.58\n",
+    "Z_c_98 = 2.33\n",
+    "Z_c_90 = 1.65\n",
+    "Z_c_85 = 1.44\n",
+    "Z_c_80 = 1.28"
+   ]
   },
   {
    "cell_type": "code",
