added margin of error and CI

--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -1006,14 +1006,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If n < 30, use the same formula, but a T_score based on DOF, instead of Z_c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09750876883644875\n",
+      "0.6475087688364488\n",
+      "0.4524912311635513\n"
+     ]
+    }
+   ],
+   "source": [
     "# B) Population proportion must be np >= 5 && n(1-p) >= 5\n",
     "n = 100\n",
-    "p = '??'\n",
     "p_hat = 0.55\n",
+    "E_b = Z_c_95 * math.sqrt(p_hat * (1 - p_hat) / n)\n",
+    "print(E_b) #0.097\n",
+    "\n",
     "#print(n*p) # Must be, greater than 5\n",
     "#print(n * (1 - p)) # Must be, greater than 5\n",
     "# Z-score = (p_hat - p) / math.sqrt([p(1-p)] / n)\n",
@@ -1026,7 +1047,18 @@
     "# 3. Then plug in the Margin of Error equation: E = Z_c * (s / math.sqrt(n))\n",
     "# H_A = proportion receiving online training is > 55%\n",
     "num_OnlineTraining = 50\n",
-    "mean_OnlineTraining = num_OnlineTraining / n\n"
+    "mean_OnlineTraining = num_OnlineTraining / n\n",
+    "upper_limit = p_hat + E_b\n",
+    "lower_limit = p_hat - E_b\n",
+    "print(upper_limit)\n",
+    "print(lower_limit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* We can say with 95% confidence that the average proportion of employees receiving online training at this company is between 65% and 45%. "
    ]
   },
   {
