made a few wording changes

--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -538,7 +538,7 @@
    "metadata": {},
    "source": [
     "## Variable Analysis on SALES\n",
-    "Sales is the one dependent variable in this analysis.  \n",
+    "Sales is the dependent variable in this analysis.  \n",
     "\n",
     "The average employee generates around 43 sales with a STD of 7.  \n",
     "\n",
@@ -1015,7 +1015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Result:  \n",
+    "### Result for :  \n",
     "\n",
     "This is a right-tail test, therefore given that our actual Z score is lower than our critical Z score, we must fail to reject the null hypothesis.  The results were not significant enough to fall into the rejection region.  There is NO sufficient evidence to support the claim that the mean sales per week exceeds 41.5 per salesman."
    ]
