update calculations on regression line

--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -434,20 +434,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -484,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +487,7 @@
        "Name: Sales (Y), dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +543,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1dd5e2b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22d16320>"
       ]
      },
      "execution_count": 16,
@@ -631,13 +617,13 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a1e0b3f60>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a1e0be5c0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x1a1e0be908>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a1e0bec50>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x1a1e0b3e10>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x1a1e0bef98>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x1a1e0c7320>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a23069eb8>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a230744e0>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x1a23074828>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a23074b70>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x1a23069d68>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x1a23074eb8>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x1a23074f98>],\n",
        " 'means': []}"
       ]
      },
@@ -761,7 +747,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1e2484e0>"
+       "<matplotlib.collections.PathCollection at 0x1a231db860>"
       ]
      },
      "execution_count": 21,
@@ -803,7 +789,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1e30a9b0>"
+       "<matplotlib.collections.PathCollection at 0x1a23299f98>"
       ]
      },
      "execution_count": 22,
@@ -829,16 +815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a1eb6d400>"
+       "<seaborn.axisgrid.PairGrid at 0x1a231db320>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -955,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1015,21 +1001,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result for :  \n",
+    "### Result for question a:  \n",
     "\n",
     "This is a right-tail test, therefore given that our actual Z score is lower than our critical Z score, we must fail to reject the null hypothesis.  The results were not significant enough to fall into the rejection region.  There is NO sufficient evidence to support the claim that the mean sales per week exceeds 41.5 per salesman."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## THE REST COMING SOON!!!!!!!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1078,13 +1064,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -1159,6 +1138,88 @@
     "Summary Report\n",
     "Points 1–14 should be addressed with appropriate output, graphs, and interpretations. Be sure to number each point 1–18.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78400 is sum of x * sum_x\n",
+      "280 is sum of x\n",
+      "895 is sum of y\n",
+      "15400 is sum of x2\n",
+      "237621 is sum of y2\n",
+      "56820 is sum of x*y\n",
+      "-2126600 is slope numerator\n",
+      "14000 is denominator\n",
+      "-151.9 is the slope\n",
+      "6.451428571428571 is the coefficient\n",
+      "Regression line is -151.9 + 6.451428571428571x\n"
+     ]
+    }
+   ],
+   "source": [
+    "xa = 20\n",
+    "xb = 30\n",
+    "xc = 40\n",
+    "xd = 50\n",
+    "xe = 60\n",
+    "xf = 80\n",
+    "\n",
+    "ya =20\n",
+    "yb = 45\n",
+    "yc =81\n",
+    "yd = 133\n",
+    "ye = 205\n",
+    "yf = 411\n",
+    "\n",
+    "sum_xy = (xa*ya) + ( xb*yb) + (xc*yc) + ( xd*yd) + (xe*ye) + (xf*yf)\n",
+    "sum_x = xa + xb + xc + xd + xe + xf\n",
+    "sum_y = ya + yb + yc + yd + ye + yf\n",
+    "n = 6\n",
+    "sum_x_squared = xa**2 + xb**2 + xc**2 + xd**2 + xe**2 + xf**2\n",
+    "sum_y_squared = ya**2 + yb**2 + yc**2 + yd**2 + ye**2 + yf**2\n",
+    "numerator_B0 = (sum_y * sum_x_squared) - (sum_x * sum_xy)\n",
+    "denominator_B0 = (n*sum_x_squared) - sum_x**2\n",
+    "\n",
+    "\n",
+    "print('{} is sum of x * sum_x'.format(sum_x*sum_x))\n",
+    "print('{} is sum of x'.format(sum_x))\n",
+    "print('{} is sum of y'.format(sum_y))\n",
+    "print('{} is sum of x2'.format(sum_x_squared))\n",
+    "print('{} is sum of y2'.format(sum_y_squared))\n",
+    "print('{} is sum of x*y'.format(sum_xy))\n",
+    "print('{} is slope numerator'.format(numerator_B0))\n",
+    "print('{} is denominator'.format(denominator_B0))\n",
+    "\n",
+    "\n",
+    "B0 = numerator_B0 / denominator_B0\n",
+    "\n",
+    "print('{} is the slope'.format(B0))\n",
+    "\n",
+    "numerator_B1 = (n*sum_xy) - (sum_x * sum_y)\n",
+    "denominator_B1 = (n*sum_x_squared) - sum_x**2\n",
+    "\n",
+    "B1 = numerator_B1 / denominator_B1\n",
+    "\n",
+    "\n",
+    "print('{} is the coefficient'.format(B1))\n",
+    "\n",
+    "y_hat = \"{} + {}x\".format(B0, B1)\n",
+    "\n",
+    "print('Regression line is {}'.format(y_hat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
