update regression code

--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,7 @@
     "import scipy.optimize\n",
     "import scipy.spatial\n",
     "from statsmodels.formula.api import ols\n",
-    "import statsmodels.formula.api as smf\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.formula.api as smapi\n"
    ]
   },
   {
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1325,25 +1324,25 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>        <td>Sales (Y)</td>    <th>  R-squared:         </th> <td>   0.972</td>\n",
+       "  <th>Dep. Variable:</th>          <td>sales</td>      <th>  R-squared:         </th> <td>   0.101</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.972</td>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.092</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   3432.</td>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   11.03</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 23 Feb 2019</td> <th>  Prob (F-statistic):</th> <td>1.18e-78</td>\n",
+       "  <th>Date:</th>             <td>Sat, 23 Feb 2019</td> <th>  Prob (F-statistic):</th>  <td>0.00126</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:02:09</td>     <th>  Log-Likelihood:    </th> <td> -339.63</td>\n",
+       "  <th>Time:</th>                 <td>13:17:00</td>     <th>  Log-Likelihood:    </th> <td> -333.06</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>   100</td>      <th>  AIC:               </th> <td>   681.3</td>\n",
+       "  <th>No. Observations:</th>      <td>   100</td>      <th>  AIC:               </th> <td>   670.1</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    99</td>      <th>  BIC:               </th> <td>   683.9</td>\n",
+       "  <th>Df Residuals:</th>          <td>    98</td>      <th>  BIC:               </th> <td>   675.3</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
@@ -1354,67 +1353,71 @@
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Calls (X1)</th> <td>    0.2611</td> <td>    0.004</td> <td>   58.585</td> <td> 0.000</td> <td>    0.252</td> <td>    0.270</td>\n",
+       "  <th>Intercept</th> <td>   22.5206</td> <td>    6.069</td> <td>    3.711</td> <td> 0.000</td> <td>   10.476</td> <td>   34.565</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>calls</th>     <td>    0.1237</td> <td>    0.037</td> <td>    3.321</td> <td> 0.001</td> <td>    0.050</td> <td>    0.198</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>17.729</td> <th>  Durbin-Watson:     </th> <td>   2.026</td>\n",
+       "  <th>Omnibus:</th>       <td>16.913</td> <th>  Durbin-Watson:     </th> <td>   1.993</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  81.808</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  80.159</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.199</td> <th>  Prob(JB):          </th> <td>1.72e-18</td>\n",
+       "  <th>Skew:</th>          <td>-0.008</td> <th>  Prob(JB):          </th> <td>3.92e-18</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 7.413</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
+       "  <th>Kurtosis:</th>      <td> 7.386</td> <th>  Cond. No.          </th> <td>1.45e+03</td>\n",
        "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.45e+03. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:              Sales (Y)   R-squared:                       0.972\n",
-       "Model:                            OLS   Adj. R-squared:                  0.972\n",
-       "Method:                 Least Squares   F-statistic:                     3432.\n",
-       "Date:                Sat, 23 Feb 2019   Prob (F-statistic):           1.18e-78\n",
-       "Time:                        13:02:09   Log-Likelihood:                -339.63\n",
-       "No. Observations:                 100   AIC:                             681.3\n",
-       "Df Residuals:                      99   BIC:                             683.9\n",
+       "Dep. Variable:                  sales   R-squared:                       0.101\n",
+       "Model:                            OLS   Adj. R-squared:                  0.092\n",
+       "Method:                 Least Squares   F-statistic:                     11.03\n",
+       "Date:                Sat, 23 Feb 2019   Prob (F-statistic):            0.00126\n",
+       "Time:                        13:17:00   Log-Likelihood:                -333.06\n",
+       "No. Observations:                 100   AIC:                             670.1\n",
+       "Df Residuals:                      98   BIC:                             675.3\n",
        "Df Model:                           1                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "==============================================================================\n",
        "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "Calls (X1)     0.2611      0.004     58.585      0.000       0.252       0.270\n",
+       "Intercept     22.5206      6.069      3.711      0.000      10.476      34.565\n",
+       "calls          0.1237      0.037      3.321      0.001       0.050       0.198\n",
        "==============================================================================\n",
-       "Omnibus:                       17.729   Durbin-Watson:                   2.026\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               81.808\n",
-       "Skew:                          -0.199   Prob(JB):                     1.72e-18\n",
-       "Kurtosis:                       7.413   Cond. No.                         1.00\n",
+       "Omnibus:                       16.913   Durbin-Watson:                   1.993\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               80.159\n",
+       "Skew:                          -0.008   Prob(JB):                     3.92e-18\n",
+       "Kurtosis:                       7.386   Cond. No.                     1.45e+03\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 1.45e+03. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
        "\"\"\""
       ]
      },
-     "execution_count": 135,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Using statsmodels...\n",
-    "model = sm.OLS(endog=sales, exog= calls)\n",
-    "results = model.fit()\n",
-    "results.summary()"
+    "lm = smapi.ols(formula=\"sales ~ calls\", data=df).fit()\n",
+    "lm.summary()"
    ]
   },
   {
