completed regression analysis

--- a/MATH534.ipynb
+++ b/MATH534.ipynb
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
        "38.61"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "42.32"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1622,7 @@
        "46.03"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
        "38.61"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,15 +1695,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The margin of error is 13.83\n",
-      "We are 95% confident that the true value of the predicted sales, when calls is 130 is between 52.44 and 24.78\n"
+      "The margin of error is 13.78\n",
+      "We are 95% confident that the true value of the predicted sales, when calls is 130 is between 52.39 and 24.83\n"
      ]
     }
    ],
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1727,7 @@
        "42.32"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,15 +1740,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The margin of error is 13.83\n",
-      "We are 95% confident that the true value of the predicted sales, when calls is 160 is between 56.15 and 28.490000000000002\n"
+      "The margin of error is 13.78\n",
+      "We are 95% confident that the true value of the predicted sales, when calls is 160 is between 56.1 and 28.54\n"
      ]
     }
    ],
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "46.03"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,15 +1785,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The margin of error is 13.83\n",
-      "We are 95% confident that the true value of the predicted sales, when calls is 190 is between 59.86 and 32.2\n"
+      "The margin of error is 13.78\n",
+      "We are 95% confident that the true value of the predicted sales, when calls is 190 is between 59.81 and 32.25\n"
      ]
     }
    ],
@@ -1807,22 +1807,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiple Linear Regression "
+    "### Multiple Linear Regression \n",
+    "\n",
+    "Grouping all columns into the regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1838,7 @@
        "  <th>Date:</th>             <td>Sat, 23 Feb 2019</td> <th>  Prob (F-statistic):</th>  <td>0.0127</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:25:41</td>     <th>  Log-Likelihood:    </th> <td> -332.79</td>\n",
+       "  <th>Time:</th>                 <td>14:36:10</td>     <th>  Log-Likelihood:    </th> <td> -332.79</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   100</td>      <th>  AIC:               </th> <td>   673.6</td>\n",
@@ -1899,7 +1894,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.078\n",
        "Method:                 Least Squares   F-statistic:                     3.798\n",
        "Date:                Sat, 23 Feb 2019   Prob (F-statistic):             0.0127\n",
-       "Time:                        13:25:41   Log-Likelihood:                -332.79\n",
+       "Time:                        14:36:10   Log-Likelihood:                -332.79\n",
        "No. Observations:                 100   AIC:                             673.6\n",
        "Df Residuals:                      96   BIC:                             684.0\n",
        "Df Model:                           3                                         \n",
@@ -1925,7 +1920,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 144,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,8 +1931,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Utility\n",
+    "\n",
+    "Overall, the p-value of this regression is 0.0127, which is very significant, enough to conclude that there is a linear relationship between sales and the three variables, time, calls, and years.\n",
+    "\n",
+    "The model is y_hat = 27.90 + 0.112*Calls - 0.235 * Time + 0.027 * Years\n",
+    "\n",
+    "Yet, isolating each indendent variable, time has a p-value of 0.4731 and years has a p-value of 0.9563.  Though there is some correlation, it is not sufficient evidence to accept this learn relationship.\n",
+    "\n",
+    "The only variable that is significant is still calls.   We can also see that the Adjusted R Square is 0.078 for this regression where the simple linear Adjusted R Square was higher at 0.092.  The Standard Error also increased a bit with this regression being 6.885 where with the linear model it was 6.833, slightly less.  This shows that adding extra variables did not improve this model.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1959,6 +1969,7 @@
     }
    ],
    "source": [
+    "# Notes for calculating regression line by hand\n",
     "xa = 20\n",
     "xb = 30\n",
     "xc = 40\n",
